--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,14 @@ license = "Apache-2.0"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12"
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.0.0"
+black = "^24.4.2"
+isort = "^5.12.0"
+mypy = "^1.7.0"
+pytest = "^8.3.1"
 
 [build-system]
 requires = ["poetry-core"]
