--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+requests = "^2.32.3"
+bs4 = "^0.0.2"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.0.0"
@@ -15,6 +17,8 @@ black = "^24.4.2"
 isort = "^5.12.0"
 mypy = "^1.7.0"
 pytest = "^8.3.1"
+types-requests = "^2.32.0.20240914"
+types-beautifulsoup4 = "^4.12.0.20240907"
 
 [build-system]
 requires = ["poetry-core"]
