--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   "dependencies": {
     "@types/node": "^20.12.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.4",
     "next": "^14.2.3",
     "react": "^18.3.0",
     "react-bootstrap": "^2.10.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
