--- a/.github/workflows/data-update.yml
+++ b/.github/workflows/data-update.yml
@@ -5,12 +5,9 @@ on: [ workflow_dispatch ]
 jobs:
   fetch_game_results_by_year:
     runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        python-version: [ "3.12" ]
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.12
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
