--- a/.github/workflows/data-update.yml
+++ b/.github/workflows/data-update.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Set up Python 3.12
       uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.12
     - name: Install poetry
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
