--- a/.github/workflows/data-update.yml
+++ b/.github/workflows/data-update.yml
@@ -36,6 +36,8 @@ jobs:
     - name: Commit changes
       if: ${{ steps.has_changes.outputs.has_changes == 'true' }}
       run: |
+        git config --global user.email "action@github.com"
+        git config --global user.name "GitHub Action"
         git add .
         git commit -m "Update data"
         git push -u origin "data-update/$(date +'%Y-%m-%d')"
