--- a/.github/workflows/data-update.yml
+++ b/.github/workflows/data-update.yml
@@ -49,21 +49,23 @@ jobs:
         git add .
         git commit -m "Update data"
         git push -u origin ${{ steps.set_branch_name.outputs.branch_name }}
-    - name: Create pull request
+    - id: create_pr
+      name: Create pull request
       if: ${{ steps.has_changes.outputs.has_changes == 'true' }}
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
-        gh pr create --title "Update data ($(date +'%Y-%m-%d'))" --body "Update data ($(date +'%Y-%m-%d'))"
+        PR_URL=$(gh pr create --title "Update data ($(date +'%Y-%m-%d'))" --body "Update data ($(date +'%Y-%m-%d'))")
+        echo "pr_url=$PR_URL" >> $GITHUB_OUTPUT
     - name: Approve pull request
       if: ${{ steps.has_changes.outputs.has_changes == 'true' }}
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
-        gh pr review --apprve
+        gh pr review --approve ${{ steps.create_pr.outputs.pr_url }}
     - name: Merge pull request
       if: ${{ steps.has_changes.outputs.has_changes == 'true' }}
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
-        gh pr merge --auto
+        gh pr merge --auto ${{ steps.create_pr.outputs.pr_url }}
