--- a/.gitignore
+++ b/.gitignore
@@ -790,3 +790,5 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/node,linux,macos,windows,visualstudio,visualstudiocode,python
+
+/playwright-report/
