--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,8 +54,10 @@ jobs:
         run: yarn install --frozen-lockfile --non-interactive
       - name: Type check
         run: yarn type-check
-      - name: Linter check
+      - name: Lint
         run: yarn lint
+      - name: Build
+        run: yarn build
       - name: Install Playwright Browsers
         run: yarn playwright install --with-deps
       - name: Run tests
@@ -67,5 +69,3 @@ jobs:
           name: playwright-report-${{ matrix.node-version }}
           path: ./playwright-report/
           retention-days: 30
-      - name: test build
-        run: yarn build
