--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "type": "module",
   "scripts": {
     "dev": "yarn next dev --port 8000",
+    "server": "http-server ./out/ --port 8000",
     "build": "next build",
     "start": "next start",
     "test": "playwright test",
