--- a/.github/workflows/data-update.yml
+++ b/.github/workflows/data-update.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v4
+    - name: Install packages
+      run: apt update && apt install -y jq
     - name: Set up Python 3.12
       uses: actions/setup-python@v5
       with:
@@ -57,6 +59,30 @@ jobs:
       run: |
         PR_URL=$(gh pr create --title "Update data ($(date +'%Y-%m-%d'))" --body "Update data ($(date +'%Y-%m-%d'))")
         echo "pr_url=$PR_URL" >> $GITHUB_OUTPUT
+    - name: Wait for PR to be mergeable
+      if: ${{ steps.has_changes.outputs.has_changes == 'true' }}
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      run: |
+        TIMEOUT=60
+        INTERVAL=10
+        START_TIME=$(date +%s)
+        while true; do
+          CURRENT_TIME=$(date +%s)
+          if (( CURRENT_TIME - START_TIME >= TIMEOUT )); then
+            echo "timeout: pr is not mergeable..."
+            exit 1
+          fi
+          MERGEABLE=$(gh pr view ${{ steps.create_pr.outputs.pr_url }} --json mergeable | jq -r '.mergeable')
+          if [ "$MERGEABLE" = "true" ]; then
+            echo "PR is mergeable!"
+            exit 0
+          else
+            echo "PR is not mergeable..."
+            echo "retry after $INTERVAL seconds..."
+          fi
+          sleep $INTERVAL
+        done
     - name: Merge pull request
       if: ${{ steps.has_changes.outputs.has_changes == 'true' }}
       env:
