--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,8 +3,8 @@ name: cd
 on:
   workflow_dispatch:
   push:
-    tags:
-      - v-*
+    branches: [ main ]
+    tags: [ v-* ]
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
