--- a/.github/workflows/data-update.yml
+++ b/.github/workflows/data-update.yml
@@ -11,7 +11,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install packages
-      run: apt update && apt install -y jq
+      run: |
+        sudo apt update
+        sudo apt install -y jq
     - name: Set up Python 3.12
       uses: actions/setup-python@v5
       with:
