--- a/.github/workflows/dependabot-targe-branch-update.yml
+++ b/.github/workflows/dependabot-targe-branch-update.yml
@@ -17,6 +17,11 @@ jobs:
       run: |
         sudo apt update
         sudo apt install -y jq
+    - name: Git config
+      if: ${{ steps.has_changes.outputs.has_changes == 'true' }}
+      run: |
+        git config --global user.email "action@github.com"
+        git config --global user.name "GitHub Action"
     - name: Update security/dependabot branch
       run: |
         LATEST_MAIN_COMMIT=$(gh api repos/${{ github.repository }}/branches/main --jq '.commit.sha')
