デバグ情報の追加。

--- a/.github/workflows/dependabot-targe-branch-update.yml
+++ b/.github/workflows/dependabot-targe-branch-update.yml
@@ -26,6 +26,8 @@ jobs:
       run: |
         LATEST_MAIN_COMMIT=$(gh api repos/${{ github.repository }}/branches/main --jq '.commit.sha')
         LATEST_SECURITY_COMMIT=$(gh api repos/${{ github.repository }}/branches/security/dependabot --jq '.commit.sha')
+        echo "Latest commit on main: $LATEST_MAIN_COMMIT"
+        echo "Latest commit on security/dependabot: $LATEST_SECURITY_COMMIT"
 
         if [ "$LATEST_MAIN_COMMIT" != "$LATEST_SECURITY_COMMIT" ]; then
           echo "Merging latest main branch into security/dependabot..."
