--- a/.github/workflows/dependabot-targe-branch-update.yml
+++ b/.github/workflows/dependabot-targe-branch-update.yml
@@ -33,6 +33,7 @@ jobs:
           echo "Merging latest main branch into security/dependabot..."
           git fetch
           git checkout security/dependabot || git checkout -b security/dependabot
+          git pull origin security/dependabot
           git merge origin/main
           if [ $? -eq 0 ]; then
             echo "Successfully merged main into security/dependabot"
