--- a/.github/workflows/dependabot-targe-branch-update.yml
+++ b/.github/workflows/dependabot-targe-branch-update.yml
@@ -34,7 +34,9 @@ jobs:
           git fetch
           git checkout security/dependabot || git checkout -b security/dependabot
           git pull origin security/dependabot
+          echo "before merge"
           git merge origin/main
+          echo "after merge"
           if [ $? -eq 0 ]; then
             echo "Successfully merged main into security/dependabot"
             git push origin security/dependabot
