--- a/.github/workflows/dependabot-targe-branch-update.yml
+++ b/.github/workflows/dependabot-targe-branch-update.yml
@@ -12,7 +12,10 @@ jobs:
   update:
     runs-on: ubuntu-22.04
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - name: Install packages
       run: |
         sudo apt update
