--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,7 @@
   "forwardPorts": [],
 
   // Uncomment the next line to run commands after the container is created.
-  "postCreateCommand": "cat /etc/os-release",
+  "postCreateCommand": "cat /etc/os-release && yarn install",
 
   // Configure tool-specific properties.
   "customizations": {},
