--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.20.5",
     "@types/node": "^22.7.9",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.5",
